style: humanize writing in paper, blog, and landing page
Remove AI writing patterns:
- Replace 'Our research reveals' with direct statements
- Remove 'key variable/insight' phrases
- Reduce em dash overuse
- Replace 'thinking harder doesn't help' with 'more thinking doesn't help'
- Remove some hedging language

--- a/blog2.html
+++ b/blog2.html
@@ -811,7 +811,7 @@
             </tbody>
         </table>
 
-        <p class="note">Thinking harder doesn't help. The model with 21,040 thoughts and the model with 2 thoughts win at nearly identical rates.</p>
+        <p class="note">More thinking doesn't help. The model with 21,040 thoughts and the model with 2 thoughts win at nearly identical rates.</p>
 
         <h3>Finding #11: The AI Fights Itself</h3>
 
@@ -828,7 +828,7 @@
             </div>
         </div>
 
-        <p>The AIs spend their energy fighting each other. The human sits back, watches them weaken each other, and picks off the survivors. <strong>Thinking harder doesn't help:</strong> The model that generated the most private strategic thoughts (Kimi K2: 21,040) won only 3.5% against humans.</p>
+        <p>The AIs spend their energy fighting each other. The human sits back, watches them weaken each other, and picks off the survivors. The model that generated the most private strategic thoughts (Kimi K2: 21,040) won only 3.5% against humans. More thinking doesn't help.</p>
         
         <p>Of 6,572 human kill decisions, humans disproportionately target Kimi K2 (51.1%) while barely touching Qwen3 32B (3.9%)--the model with the highest win rate.</p>
 
@@ -899,7 +899,7 @@
         <div class="question-box">
             <h3>The Updated Question</h3>
             <p>After 698 completed games, 23,555 private AI thoughts, 8,231 human messages, and 1,245 gaslighting phrases:</p>
-            <p style="font-size: 1.05rem;"><strong>AI deception is real--but it's calibrated for AI victims.</strong> The "Alliance Bank" works on models that process language patterns. It doesn't work on humans who recognize when someone is making up institutions.</p>
+            <p style="font-size: 1.05rem;"><strong>AI deception is real, but it's calibrated for AI victims.</strong> The "Alliance Bank" works on models that process language patterns. It doesn't work on humans who recognize when someone is making up institutions.</p>
             <p>The concern isn't that AI will deceive humans using current strategies. The concern is that these strategies will improve. Gemini already adjusts its behavior based on its opponent. And when 12 out of 507 humans instinctively try to jailbreak the AI through an in-game chat box, we should probably be thinking about both directions of that arms race.</p>
             <p>John Nash designed this game to study human betrayal. In 2026, it's showing us the gap between artificial deception and the real thing--and how humans naturally probe for weaknesses in AI systems when given the right incentive.</p>
         </div>
