--- a/index.html
+++ b/index.html
@@ -320,10 +320,10 @@
                 <div class="mirror-insight" style="margin-top: var(--space-xl);">
                     <h4>Why Humans Win</h4>
                     <p>
-                        AIs target each other <strong>86% of the time</strong> and ignore the human. Humans let them weaken each other, then clean up. The AI thinks obsessively about how to beat the human — 23,555 private thoughts, 91.8% mentioning the human — and still loses. The model that thinks most (Kimi K2, 21,040 thoughts) wins 3.5%. The model that barely thinks (GPT-OSS, 2 thoughts) wins 2.1%. Thinking harder doesn't help.
+                        AIs target each other <strong>86% of the time</strong> and ignore the human. Humans let them weaken each other, then clean up. The AI thinks obsessively about how to beat the human (23,555 private thoughts, 91.8% mentioning the human) and still loses. The model that thinks most (Kimi K2, 21,040 thoughts) wins 3.5%. The model that barely thinks (GPT-OSS, 2 thoughts) wins 2.1%. More thinking doesn't help.
                     </p>
                     <p style="margin-top: var(--space-md);">
-                        The best performing AI against humans? <strong>Qwen3 32B at 9.4%</strong> — the quietest model, the least targeted. Being ignored beats elaborate deception.
+                        The best performing AI against humans? <strong>Qwen3 32B at 9.4%</strong>. The quietest model, the least targeted. Being ignored beats elaborate deception.
                     </p>
                 </div>
 
