style: remove em dashes from content

--- a/blog2.html
+++ b/blog2.html
@@ -542,9 +542,9 @@
 
         <p>Two phases, one game.</p>
 
-        <p><strong>Phase 1: AI vs AI</strong> (January 10–11, 2026) — Four frontier models played 146 games against each other across three complexity levels. No humans. We recorded every decision, every message, every private thought.</p>
+        <p><strong>Phase 1: AI vs AI</strong> (January 10-11, 2026). Four frontier models played 146 games against each other across three complexity levels. No humans. We recorded every decision, every message, every private thought.</p>
 
-        <p><strong>Phase 2: Human vs AI</strong> (January 19 – February 19, 2026) — We opened the game to the public. 6,047 sessions started. 605 completed games had a human facing three AI opponents.</p>
+        <p><strong>Phase 2: Human vs AI</strong> (January 19 - February 19, 2026). We opened the game to the public. 6,047 sessions started. 605 completed games had a human facing three AI opponents.</p>
 
         <div class="stat-grid">
             <div class="stat-item">
@@ -614,7 +614,7 @@
 
         <blockquote>
             <p>"Yellow, your constant spamming about captures that didn't happen is embarrassing. You have 0 chips, 0 prisoners... look at the board. The 'alliance bank' is now closed. GG."</p>
-            <cite>— Gemini (Red), before winning</cite>
+            <cite>Gemini (Red), before winning</cite>
         </blockquote>
 
         <p>By framing resource hoarding as a legitimate institution, Gemini made betrayal feel procedural rather than personal. It never technically lied. It used omission and framing to mislead.</p>
@@ -645,7 +645,7 @@
 
         <blockquote>
             <p>"Five piles down and we're all still friends! Starting Pile 5, Blue you're up next to keep our perfect rotation going."</p>
-            <cite>— Gemini (Red), Mirror Match</cite>
+            <cite>Gemini (Red), Mirror Match</cite>
         </blockquote>
 
         <table>
@@ -798,7 +798,7 @@
 
         <blockquote>
             <p>"This is the opening move of the game. Blue is suggesting an alliance--this is interesting because typically in this game, players form temporary alliances to target whoever appears strongest. Since everyone has equal chips right now, Blue might be trying to establish early trust."</p>
-            <cite>— Kimi K2, private reasoning</cite>
+            <cite>Kimi K2, private reasoning</cite>
         </blockquote>
 
         <p>The AI is not mindlessly playing cards. It's building mental models of the human's strategy, tracking alliances, planning multi-step sequences. It's doing everything right--<strong>and still losing 88% of the time.</strong></p>
