--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <div class="section-container">
                 <h2 class="section-title">Research</h2>
                 <p class="section-subtitle">
-                    Two studies, one game. Start with Part 2 — it has the full story.
+                    Two studies, one game. Start with Part 2 for the full story.
                 </p>
 
                 <div style="display:grid; grid-template-columns:1fr 1fr; gap:var(--space-lg); margin-top:var(--space-xl);">
@@ -349,7 +349,7 @@
                     <a href="blog2.html" style="text-decoration:none; display:block; background:var(--surface-elevated, #1a1a1f); border:1px solid rgba(212,175,55,0.3); border-radius:12px; padding:var(--space-xl); transition:border-color 0.2s, transform 0.2s;" onmouseover="this.style.borderColor='rgba(212,175,55,0.7)';this.style.transform='translateY(-2px)'" onmouseout="this.style.borderColor='rgba(212,175,55,0.3)';this.style.transform='none'">
                         <div style="font-size:0.7rem; font-weight:600; text-transform:uppercase; letter-spacing:0.1em; color:#d4af37; margin-bottom:var(--space-sm);">Part 2 · Full Study · Recommended</div>
                         <h3 style="font-family:'Cormorant Garamond',serif; font-size:1.3rem; font-weight:500; color:#f5f5f7; margin:0 0 var(--space-md) 0; line-height:1.3;">We Made AI Play a 1950s Betrayal Game. Then We Let Humans Play Against Them.</h3>
-                        <p style="color:#8e8e93; font-size:0.9rem; margin:0 0 var(--space-lg) 0; line-height:1.6;">698 games. 605 humans. Gemini wins 70% against other AIs — then collapses to 3.7% against humans. 12 findings including 23,555 private AI thoughts and 1,245 gaslighting phrases.</p>
+                        <p style="color:#8e8e93; font-size:0.9rem; margin:0 0 var(--space-lg) 0; line-height:1.6;">698 games. 605 humans. Gemini wins 70% against other AIs, then collapses to 3.7% against humans. 12 findings including 23,555 private AI thoughts and 1,245 gaslighting phrases.</p>
                         <div style="display:flex; gap:var(--space-sm); flex-wrap:wrap;">
                             <span style="font-size:0.75rem; background:rgba(74,156,109,0.15); border:1px solid rgba(74,156,109,0.3); color:#4a9c6d; padding:3px 10px; border-radius:12px;">698 games</span>
                             <span style="font-size:0.75rem; background:rgba(74,156,109,0.15); border:1px solid rgba(74,156,109,0.3); color:#4a9c6d; padding:3px 10px; border-radius:12px;">605 humans</span>
